@@ -31,6 +31,7 @@ Border::MeasureOverrideWithError (Size availableSize, MoonError *error)
 	Size desired = Size (0,0);
 
 	Thickness border = *GetPadding () + *GetBorderThickness ();
+	border = border.ApplyFlow (GetFlowDirection ());
 
 	// Get the desired size of our child, and include any margins we set
 	VisualTreeWalker walker = VisualTreeWalker (this);
@@ -50,7 +51,8 @@ Size
 Border::ArrangeOverrideWithError (Size finalSize, MoonError *error)
 {
 	Thickness border = *GetPadding () + *GetBorderThickness ();
-	
+	border = border.ApplyFlow (GetFlowDirection ());
+
 	Size arranged = finalSize;
 	
 	VisualTreeWalker walker = VisualTreeWalker (this);
@@ -82,8 +84,10 @@ Border::Render (cairo_t *cr, Region *region, bool path_only)
 	if (!path_only)
 		RenderLayoutClip (cr);
 
-	CornerRadius *round = GetCornerRadius ();
-	Thickness thickness = *GetBorderThickness ();
+	FlowDirection dir = GetFlowDirection ();
+	CornerRadius r = GetCornerRadius ()->ApplyFlow (dir);
+	CornerRadius *round =  &r;
+	Thickness thickness = GetBorderThickness ()->ApplyFlow (dir);
 	Rect paint_border = extents;
 	Rect paint_background = paint_border.GrowBy (-thickness);
 
