@@ -1,3 +1,15 @@
+2010-07-19  Larry Ewing  <lewing@novell.com>
+
+	* thickness.h:
+	* cornerradius.h: Add new ApplyFlow methods to deal with the new
+	FlowDirection logic.
+
+	* border.cpp: Use apply Flow to modify the border rendering based
+	on the flowdirection.
+
+	* frameworkelement.cpp: make flowdirection change invalidate the
+	layout.
+
 2010-07-19  Jeffrey Stedfast  <fejj@novell.com>
 
 	* multiscaleimage.cpp: Fixed to properly handle NULL returns from
